--- a/Marina/workshops.html
+++ b/Marina/workshops.html
@@ -90,10 +90,11 @@ function fix_menu() {
 		<p>
     </p>
     <p>
-        <a href="workshops/WORKSHOPS MET MARINA herfst 2022.pdf">Herfst 2022</a><br />
+        <a href="workshops/Workshops met Marina kerst 2022.pdf">Kerst 2022</a><br />
 	</p>
 		<h2>Archief</h3>
 		<p>
+        <a href="workshops/WORKSHOPS MET MARINA herfst 2022.pdf">Herfst 2022</a><br />
             <a href="workshops/Workshops met Marina september 2022.pdf">September 2022</a><br />
             <a href="workshops/Workshop met Marina Mei 2022.pdf">Mei 2022</a><br />            <a href="workshops/Workshops met Marina maart 2022.pdf">Maart 2022</a><br />
             <a href="workshops/Workshops met Marina April 2022.pdf">April 2022</a><br />
