--- a/Marina/workshops.html
+++ b/Marina/workshops.html
@@ -89,6 +89,7 @@ function fix_menu() {
     </p>
     <p>
         <a href="workshops/Workshops met Marina kerst 2022.pdf">Kerst 2022</a><br />
+        <a href="workshops/Workshops met Marina kerst 2022 deel 2.pdf">Kerst 2022 deel 2</a><br />
 	</p>
 		<h2>Archief</h3>
 		<p>
