--- a/Marina/workshops.html
+++ b/Marina/workshops.html
@@ -88,6 +88,7 @@ function fix_menu() {
 		<p>
     </p>
         <a href="workshops/Workshops met Marina maart 2023 Pasen.pdf">Pasen 2023</a><br />
+        <a href="workshops/Workshops met Marina April 2023.pdf">April 2023</a><br />
     <p>
 	</p>
 		<h2>Archief</h3>
