add Workshop oktober

--- a/Marina/workshops.html
+++ b/Marina/workshops.html
@@ -89,35 +89,36 @@ function fix_menu() {
     </p>
     <p>
         <a href="workshops/Workshops met Marina september 23.pdf">September 2023</a><br />
+        <a href="workshops/workshop met marina oktober 2023.pdf">Oktober 2023</a><br />
 	</p>
 		<h2>Archief</h3>
 		<p>
-            <a href="workshops/Workshops met Marina Mei 2023.pdf">Mei 2023</a><br />
-            <a href="workshops/Workshops met Marina juni 2023.pdf">Juni 2023</a><br />
-            <a href="workshops/Workshops met Marina April 2023.pdf">April 2023</a><br />
-            <a href="workshops/Workshops met Marina maart 2023 Pasen.pdf">Pasen 2023</a><br />
-            <a href="workshops/Workshops met Marina februari 2023.pdf">Februari 2023</a><br />
-            <a href="workshops/Workshops met Marina kerst 2022.pdf">Kerst 2022</a><br />
-            <a href="workshops/Workshops met Marina kerst 2022 deel 2.pdf">Kerst 2022 deel 2</a><br />
-            <a href="workshops/WORKSHOPS MET MARINA herfst 2022.pdf">Herfst 2022</a><br />
-            <a href="workshops/Workshops met Marina september 2022.pdf">September 2022</a><br />
-            <a href="workshops/Workshop met Marina Mei 2022.pdf">Mei 2022</a><br />
-            <a href="workshops/Workshops met Marina maart 2022.pdf">Maart 2022</a><br />
-            <a href="workshops/Workshops met Marina April 2022.pdf">April 2022</a><br />
-            <a href="workshops/Workshops met Marina februari 2022.pdf">Februari 2022</a><br />
-            <a href="workshops/workshopsJanuari2022.pdf">Januari 2022</a><br />
-            <a href="workshops/workshopKerst2021.pdf">Kerst 2021</a><br />
-            <a href="workshops/workshopNovember2021.pdf">November 2021</a><br />
-            <a href="workshops/workshopOktober2021.pdf">Oktober 2021</a><br />
-            <a href="workshops/workshopMoederdag2021.pdf">Moederdag 2021</a><br />
-            <a href="workshops/workshopMoederdag2021extra.pdf">Moederdag 2021 extra</a><br />
-            <a href="workshops/workshopPasen2021.pdf">Pasen 2021</a><br />
-            <a href="workshops/workshopValentijn2020.pdf">Valentijn 2020</a><br />
-            <a href="workshops/workshopPasen2020.pdf">Pasen 2020</a><br />
-            <a href="workshops/workshopMaart2020.pdf">Voorjaar 2020</a><br />
-            <a href="workshops/workshopKerst2019_deel1.pdf">Kerst 2019 deel 1</a><br />
-            <a href="workshops/workshopKerst2019_deel2_nieuw.pdf">Kerst 2019 deel 2 (aangepast)</a><br />
-            <a href="workshops/workshopNovember2019.pdf">November 2019</a><br />
+      <a href="workshops/Workshops met Marina Mei 2023.pdf">Mei 2023</a><br />
+      <a href="workshops/Workshops met Marina juni 2023.pdf">Juni 2023</a><br />
+      <a href="workshops/Workshops met Marina April 2023.pdf">April 2023</a><br />
+      <a href="workshops/Workshops met Marina maart 2023 Pasen.pdf">Pasen 2023</a><br />
+      <a href="workshops/Workshops met Marina februari 2023.pdf">Februari 2023</a><br />
+      <a href="workshops/Workshops met Marina kerst 2022.pdf">Kerst 2022</a><br />
+      <a href="workshops/Workshops met Marina kerst 2022 deel 2.pdf">Kerst 2022 deel 2</a><br />
+      <a href="workshops/WORKSHOPS MET MARINA herfst 2022.pdf">Herfst 2022</a><br />
+      <a href="workshops/Workshops met Marina september 2022.pdf">September 2022</a><br />
+      <a href="workshops/Workshop met Marina Mei 2022.pdf">Mei 2022</a><br />
+      <a href="workshops/Workshops met Marina maart 2022.pdf">Maart 2022</a><br />
+      <a href="workshops/Workshops met Marina April 2022.pdf">April 2022</a><br />
+      <a href="workshops/Workshops met Marina februari 2022.pdf">Februari 2022</a><br />
+      <a href="workshops/workshopsJanuari2022.pdf">Januari 2022</a><br />
+      <a href="workshops/workshopKerst2021.pdf">Kerst 2021</a><br />
+      <a href="workshops/workshopNovember2021.pdf">November 2021</a><br />
+      <a href="workshops/workshopOktober2021.pdf">Oktober 2021</a><br />
+      <a href="workshops/workshopMoederdag2021.pdf">Moederdag 2021</a><br />
+      <a href="workshops/workshopMoederdag2021extra.pdf">Moederdag 2021 extra</a><br />
+      <a href="workshops/workshopPasen2021.pdf">Pasen 2021</a><br />
+      <a href="workshops/workshopValentijn2020.pdf">Valentijn 2020</a><br />
+      <a href="workshops/workshopPasen2020.pdf">Pasen 2020</a><br />
+      <a href="workshops/workshopMaart2020.pdf">Voorjaar 2020</a><br />
+      <a href="workshops/workshopKerst2019_deel1.pdf">Kerst 2019 deel 1</a><br />
+      <a href="workshops/workshopKerst2019_deel2_nieuw.pdf">Kerst 2019 deel 2 (aangepast)</a><br />
+      <a href="workshops/workshopNovember2019.pdf">November 2019</a><br />
 			<a href="workshops/workshopOktober2019.pdf">Oktober 2019</a><br />
 			<a href="workshops/workshopSeptember2019.pdf">September 2019</a><br />
 			<a href="workshops/workshopJuni2019.pdf">Juni 2019</a><br />
