update workshop with correct data

--- a/Marina/workshops.html
+++ b/Marina/workshops.html
@@ -89,7 +89,7 @@ function fix_menu() {
     </p>
     <p>
         <a href="workshops/Workshops met Marina september 23.pdf">September 2023</a><br />
-        <a href="workshops/workshop met marina oktober 2023.pdf">Oktober 2023</a><br />
+        <a href="workshops/workshop met marina oktober 2023-1.pdf">Oktober 2023</a> (data gecorrigeerd)<br />
 	</p>
 		<h2>Archief</h3>
 		<p>
