--- a/Marina/workshops.html
+++ b/Marina/workshops.html
@@ -88,11 +88,12 @@ function fix_menu() {
 		<p>
     </p>
     <p>
-        <a href="workshops/workshop met marina oktober 2023-1.pdf">Oktober 2023</a> (data gecorrigeerd)<br />
         <a href="workshops/workshops met Marina november 2023.pdf">November 2023</a><br />
+        <a href="workshops/Workshops met Marina december 2023.pdf">December, Kerst 2023</a><br />
 	</p>
 		<h2>Archief</h3>
 		<p>
+            <a href="workshops/workshop met marina oktober 2023-1.pdf">Oktober 2023</a>
             <a href="workshops/Workshops met Marina september 23.pdf">September 2023</a><br />
             <a href="workshops/Workshops met Marina Mei 2023.pdf">Mei 2023</a><br />
             <a href="workshops/Workshops met Marina juni 2023.pdf">Juni 2023</a><br />
