remove note to workshop

--- a/Marina/workshops.html
+++ b/Marina/workshops.html
@@ -119,7 +119,7 @@ function fix_menu() {
             <a href="workshops/workshopPasen2020.pdf">Pasen 2020</a><br />
             <a href="workshops/workshopMaart2020.pdf">Voorjaar 2020</a><br />
             <a href="workshops/workshopKerst2019_deel1.pdf">Kerst 2019 deel 1</a><br />
-            <a href="workshops/workshopKerst2019_deel2_nieuw.pdf">Kerst 2019 deel 2 (aangepast)</a><br />
+            <a href="workshops/workshopKerst2019_deel2_nieuw.pdf">Kerst 2019 deel 2</a><br />
             <a href="workshops/workshopNovember2019.pdf">November 2019</a><br />
             <a href="workshops/workshopOktober2019.pdf">Oktober 2019</a><br />
             <a href="workshops/workshopSeptember2019.pdf">September 2019</a><br />
