--- a/Marina/workshops.html
+++ b/Marina/workshops.html
@@ -89,7 +89,8 @@ function fix_menu() {
     </p>
     <p>
         <a href="workshops/workshops met Marina november 2023.pdf">November 2023</a><br />
-        <a href="workshops/Workshops met Marina december 2023.pdf">December, Kerst 2023</a><br />
+        <a href="workshops/Workshops met Marina december 2023.pdf">December, Kerst 2023 deel 1</a><br />
+        <a href="workshops/Workshops met Marina 2023 kerst deel 2.pdf">December, Kerst 2023 deel 2</a><br />
 	</p>
 		<h2>Archief</h3>
 		<p>
