--- a/Marina/workshops.html
+++ b/Marina/workshops.html
@@ -89,6 +89,7 @@ function fix_menu() {
     </p>
     <p>
         <a href="workshops/Workshop met Marina januari 2024.pdf">Januari 2024</a><br />
+        <a href="workshops/Workshop met Marina Februari 2024.pdf">Februari 2024</a><br />
 	</p>
     <h2>Femma</h2>
     <p>
