--- a/Marina/workshops.html
+++ b/Marina/workshops.html
@@ -88,8 +88,7 @@ function fix_menu() {
 		<p>
     </p>
     <p>
-        <a href="workshops/Workshops met Marina maart 2024 pasen.pdf">Maart 2024</a><br />
-        <a href="workshops/Workshops met Marina April 2024.pdf">April 2024</a><br />
+        <a href="workshops/Workshop met Marina Mei 2024.pdf">Mei 2024</a><br />
 	</p>
     <h2>Femma</h2>
     <p>
@@ -97,6 +96,8 @@ function fix_menu() {
     </p>
 		<h2>Archief</h3>
 		<p>
+            <a href="workshops/Workshops met Marina April 2024.pdf">April 2024</a><br />
+            <a href="workshops/Workshops met Marina maart 2024 pasen.pdf">Maart 2024</a><br />
             <a href="workshops/Workshop met Marina Februari 2024.pdf">Februari 2024</a><br />
             <a href="workshops/Workshop met Marina januari 2024.pdf">Januari 2024</a><br />
             <a href="workshops/Workshops met Marina december 2023.pdf">December, Kerst 2023 deel 1</a><br />
