--- a/Marina/workshops.html
+++ b/Marina/workshops.html
@@ -88,8 +88,8 @@ function fix_menu() {
 		<p>
     </p>
     <p>
-        <a href="workshops/workshop met Marina september 2024.pdf">September 2024</a><br />
         <a href="workshops/Workshops met Marina oktober 2024.pdf">Oktober 2024</a><br />
+        <a href="workshops/workshops met Marina november 2024 kleurkeuze.pdf">November 2024</a><br />
 	</p>
     <h2>Femma</h2>
     <p>
@@ -97,6 +97,7 @@ function fix_menu() {
     </p>
 		<h2>Archief</h3>
 		<p>
+            <a href="workshops/workshop met Marina september 2024.pdf">September 2024</a><br />
             <a href="workshops/Workshop met Marina Mei 2024.pdf">Mei 2024</a><br />
             <a href="workshops/Workshops met Marina April 2024.pdf">April 2024</a><br />
             <a href="workshops/Workshops met Marina maart 2024 pasen.pdf">Maart 2024</a><br />
