--- a/Marina/workshops.html
+++ b/Marina/workshops.html
@@ -89,7 +89,8 @@ function fix_menu() {
     </p>
     <p>
         <a href="workshops/workshops met Marina november 2024 kleurkeuze.pdf">November 2024</a><br />
-        <a href="workshops/Workshops met Marina kerst 2024 deel 1.pdf">Kerst 2024</a><br />
+        <a href="workshops/Workshops met Marina kerst 2024 deel 1.pdf">Kerst 2024 deel 1</a><br />
+        <a href="workshops/Workshops met Marina kerst 2024 deel 2.pdf">Kerst 2024 deel 2</a><br />
 	</p>
     <h2>Femma</h2>
     <p>
