--- a/Marina/workshops.html
+++ b/Marina/workshops.html
@@ -88,9 +88,7 @@ function fix_menu() {
 		<p>
     </p>
     <p>
-        <a href="workshops/workshops met Marina november 2024 kleurkeuze.pdf">November 2024</a><br />
-        <a href="workshops/Workshops met Marina kerst 2024 deel 1.pdf">Kerst 2024 deel 1</a><br />
-        <a href="workshops/Workshops met Marina kerst 2024 deel 2.pdf">Kerst 2024 deel 2</a><br />
+        <a href="workshops/Workshops met Marina januari 2025.pdf">Januari 2024</a><br />
 	</p>
     <h2>Femma</h2>
     <p>
@@ -98,6 +96,9 @@ function fix_menu() {
     </p>
 		<h2>Archief</h3>
 		<p>
+            <a href="workshops/Workshops met Marina kerst 2024 deel 2.pdf">Kerst 2024 deel 2</a><br />
+            <a href="workshops/Workshops met Marina kerst 2024 deel 1.pdf">Kerst 2024 deel 1</a><br />
+            <a href="workshops/workshops met Marina november 2024 kleurkeuze.pdf">November 2024</a><br />
             <a href="workshops/Workshops met Marina oktober 2024.pdf">Oktober 2024</a><br />
             <a href="workshops/workshop met Marina september 2024.pdf">September 2024</a><br />
             <a href="workshops/Workshop met Marina Mei 2024.pdf">Mei 2024</a><br />
