--- a/Marina/workshops.html
+++ b/Marina/workshops.html
@@ -86,16 +86,11 @@ function fix_menu() {
 		</p>
 		<h2>Programma</h2>
 		<p>
-    </p>
-    <p>
-        <a href="workshops/Workshops met Marina januari 2025.pdf">Januari 2024</a><br />
-	</p>
-    <h2>Femma</h2>
-    <p>
-        <a href="workshops/Bloemschikflyer 2024.pdf">Workshops Femma 2024</a><br />
-    </p>
+            <a href="workshops/workshops\ met\ Marina\ Februari\ 2025.pdf">Februari 2025</a><br />
+        </p>
 		<h2>Archief</h3>
 		<p>
+            <a href="workshops/Workshops met Marina januari 2025.pdf">Januari 2025</a><br />
             <a href="workshops/Workshops met Marina kerst 2024 deel 2.pdf">Kerst 2024 deel 2</a><br />
             <a href="workshops/Workshops met Marina kerst 2024 deel 1.pdf">Kerst 2024 deel 1</a><br />
             <a href="workshops/workshops met Marina november 2024 kleurkeuze.pdf">November 2024</a><br />
