--- a/Marina/workshops.html
+++ b/Marina/workshops.html
@@ -86,7 +86,7 @@ function fix_menu() {
 		</p>
 		<h2>Programma</h2>
 		<p>
-            <a href="workshops/workshops\ met\ Marina\ Februari\ 2025.pdf">Februari 2025</a><br />
+            <a href="workshops/workshops met Marina Februari 2025.pdf">Februari 2025</a><br />
         </p>
 		<h2>Archief</h3>
 		<p>
