--- a/Marina/workshops.html
+++ b/Marina/workshops.html
@@ -87,6 +87,7 @@ function fix_menu() {
 		<h2>Programma</h2>
 		<p>
             <a href="workshops/workshops met Marina Februari 2025.pdf">Februari 2025</a><br />
+            <a href="workshops/workshop met Marina Maart 2025.pdf">Maart 2025</a><br />
         </p>
 		<h2>Archief</h3>
 		<p>
