--- a/Marina/workshops.html
+++ b/Marina/workshops.html
@@ -87,6 +87,7 @@ function fix_menu() {
 		<h2>Programma</h2>
 		<p>
             <a href="workshops/Workshops met Marina september 2025.pdf">September 2025</a><br />
+            <a href="workshops/Workshops met Marina oktober 2025.pdf">Oktober 2025</a><br />
         </p>
 		<h2>Archief</h3>
 		<p>
