--- a/Marina/workshops.html
+++ b/Marina/workshops.html
@@ -87,6 +87,7 @@ function fix_menu() {
 		<h2>Programma</h2>
 		<p>
             <a href="workshops/Workshop met Marina januari 2026.pdf">Januari 2026</a><br />
+            <a href="workshops/Workshop met Marina Februari 2026.pdf">Februari 2026</a><br />
         </p>
 		<h2>Archief</h3>
 		<p>
