--- a/Marina/workshops.html
+++ b/Marina/workshops.html
@@ -86,11 +86,12 @@ function fix_menu() {
 		</p>
 		<h2>Programma</h2>
 		<p>
-            <a href="workshops/Workshop met Marina januari 2026.pdf">Januari 2026</a><br />
             <a href="workshops/Workshop met Marina Februari 2026.pdf">Februari 2026</a><br />
+            <a href="workshops/Workshops met Marina Maart 2026 Pasen.pdf">Maart, Pasen 2026</a><br />
         </p>
 		<h2>Archief</h3>
 		<p>
+            <a href="workshops/Workshop met Marina januari 2026.pdf">Januari 2026</a><br />
             <a href="workshops/Workshops met Marina december 2025.pdf">December 2025 deel 1</a><br />
             <a href="workshops/Workshops met Marina december 2025 deel2.pdf">December 2025 deel 2</a><br />
             <a href="workshops/Workshops met Marina November 2025.pdf">November 2025</a><br />
